--- a/css/styles.css
+++ b/css/styles.css
@@ -74,13 +74,12 @@ span {
   color: var(--accent-color);
 }
 header {
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
+  height: 80px;
 }
 .header-nav {
-  align-items: center;
+  align-items: baseline;
   display: flex;
-  margin-top: 25px;
-  margin-bottom: 25px;
 }
 .head-nav {
   font-weight: 500;
@@ -92,7 +91,9 @@ header {
 .head-nav-list {
   display: inline-block;
 }
-
+.head-nav-list:nth-last-child(-n + 2) {
+  margin-left: 50px;
+}
 .head-nav-link {
   font-size: 14px;
   line-height: 1.14;
@@ -100,7 +101,6 @@ header {
   text-decoration: none;
   font-weight: 500;
   display: block;
-  margin-left: 50px;
 }
 .head-nav-link:hover,
 .head-nav-link:focus {
@@ -126,6 +126,8 @@ header {
 .head-contacts-link {
   color: var(--secondary-text-color);
   display: inline-block;
+}
+.head-contacts-link:last-child {
   margin-right: 50px;
 }
 .hero {
@@ -145,6 +147,7 @@ header {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--thirdparty-text-color);
+  max-width: 700px;
 }
 
 .hero-button {
@@ -171,7 +174,7 @@ header {
 }
 .column-list {
   margin-left: -30px;
-  margin-right: -30px;
+  display: flex;
 }
 .column-card {
   max-width: 270px;
@@ -198,8 +201,8 @@ header {
   padding-top: 0;
 }
 .workspace-list {
-  margin-left: -30px;
   margin-right: -30px;
+  display: flex;
 }
 .workspace-card {
   display: inline-flex;
@@ -219,7 +222,7 @@ header {
 }
 .team-list {
   margin-right: -30px;
-  margin-left: -30px;
+  display: flex;
 }
 .team-title {
   font-weight: bold;
@@ -268,6 +271,8 @@ header {
 }
 footer {
   background-color: var(--footer-background-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .footer-address {
   font-size: 14px;
