--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,8 @@ header {
 .header-nav {
   align-items: baseline;
   display: flex;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 .head-nav {
   font-weight: 500;
@@ -233,9 +235,8 @@ header {
   margin-bottom: 50px;
 }
 .team-player {
-  display: inline-flex;
   margin-right: 30px;
-  flex-basis: calc((100% - 120px) / 4);
+  flex-basis: calc((100% - 90px) / 4);
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
